# mlir-tut-impl

./: .gitignore  CMakeLists.txt  Makefile  README.md  ru.rs
Dialect/: CMakeLists.txt
Dialect/include/: register.h
Dialect/include/Poly/: CMakeLists.txt  PolyDialect.h  PolyOps.h  PolyOps.td  PolyTypes.h  PolyTypes.td
Dialect/lib/: register.cpp
Dialect/lib/Poly/: PolyDialect.cpp  PolyOps.cpp  PolyTypes.cpp
build-dir/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  tablegen_compile_commands.yml
build-dir/Dialect/: Makefile  cmake_install.cmake
build-dir/Dialect/include/: Makefile  cmake_install.cmake
build-dir/Dialect/include/Poly/: Makefile  PolyOps.cpp.inc  PolyOps.h.inc  PolyOpsDialect.h.inc  PolyOpsTypes.cpp.inc  PolyOpsTypes.h.inc  cmake_install.cmake
build-dir/Dialect/lib/: Makefile  cmake_install.cmake
build-dir/Dialect/lib/Poly/: Makefile  cmake_install.cmake
build-dir/lib/: Makefile  cmake_install.cmake
build-dir/lib/Dialect/: Makefile  cmake_install.cmake
build-dir/lib/Dialect/Poly/: Makefile  PolyOps.cpp.inc  PolyOps.h.inc  PolyOpsDialect.cpp.inc  PolyOpsDialect.h.inc  cmake_install.cmake
build-dir/test/: .lit_test_times.txt
build-dir/test/Output/: code_motion.mlir.script  code_motion.mlir.tmp  poly_type.mlir.script  poly_type.mlir.tmp
build-dir/tests/: Makefile  cmake_install.cmake  lit.site.cfg.py
build-dir/tools/: Makefile  cmake_install.cmake
dialect-intregration/: Cargo.toml  build.rs
dialect-intregration/src/: bindings.rs  lib.rs  main.rs
lib/Dialect/Poly/: CMakeLists.txt  PolyDialect.cpp  PolyDialect.h  PolyDialect.td  PolyOps.cpp  PolyOps.h  PolyOps.td  PolyTypes.h  PolyTypes.td
tests/: CMakeLists.txt  code_motion.mlir  poly_type.mlir
tools/: CMakeLists.txt  tutorial-opt.cpp
